--- a/Source/SetupCamp/SetupCamp.csproj
+++ b/Source/SetupCamp/SetupCamp.csproj
@@ -76,5 +76,8 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="0Harmony.dll" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
